added verification that the word matches its index entry

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ task verifyDictionary {
 				word ->
 					// each word should have the attribute 'w' defined.
 					assert word.w != null : "attribute 'w' missing for entry in '" + index + "'"
+					// verify that the word corresponds to the index.
+					assert word.w.toLowerCase().replace("|", "").equals(index) : "word '" + word.w + "' does not correspond to entry in '" + index + "'"
 			}
 	}
 }
