check the swiss dictionary for correctness as well

--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,11 @@ task verifyDictionaryDeDE {
 	verifyDictionary(new JsonSlurper().parse(new File("${projectDir}/src/dict/alltiny.dict.base.de_de.json")))
 }
 
+task verifyDictionaryDeCH {
+	description = 'verifies the dictionary to be syntactical correct'
+	verifyDictionary(new JsonSlurper().parse(new File("${projectDir}/src/dict/alltiny.dict.base.de_ch.json")))
+}
+
 task verifyDictionaryEnGB {
 	description = 'verifies the dictionary to be syntactical correct'
 	verifyDictionary(new JsonSlurper().parse(new File("${projectDir}/src/dict/alltiny.dict.base.en_gb.json")))
