--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,19 @@ import groovy.json.JsonSlurper
 
 description = 'javascript spellchecker'
 
+buildscript {
+	repositories {
+		maven {
+			url "https://plugins.gradle.org/m2/"
+		}
+	}
+	dependencies {
+		classpath "gradle.plugin.com.github.rsuiteCMS:gradlePhantomjsAssistant:0.4"
+	}
+}
+
+apply plugin: "com.github.rsuiteCMS.gradlePhantomjsAssistant"
+
 def verifyDictionary(dict) {
 	assert dict instanceof Map
 	assert dict.name != null : "dictionary must have a name"
